chandeliers-lus/tests/compile_fail/ui/causality/undeclared-node.stderr
error: fby_witness is not a known function in this scope.
  --> tests/compile_fail/ui/causality/undeclared-node.rs:18:33
   |
18 |         assert fby_testing(n) = fby_witness(n);
   |                                 ^^^^^^^^^^^^^^
